--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -112,40 +112,159 @@
     <div class="casa mt-4">
             <div class="column">
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="gap: 134px; width: 100%;">CAUSADO POR ANIMAIS 
+                    <div class="descrition d-flex" style="gap: 133px; width: 100%;">CAUSADO POR ANIMAIS 
                         <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div>COM MEIO DE TRANSPORTE</div>
+                    <div class="descrition d-flex" style="width: 100%; gap: 101px;">COM MEIO DE TRANSPORTE
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
                 </div>
-                <div class="block px-3"><div>DESMORONAMENTO/DESLIZAMENTO</div></div>
-                <div class="block px-3"><div>EMERGÊNCIA MÉDICA</div></div>
-                <div class="block px-3"><div>QUEDA DE ALTURA 2M</div></div>
-                <div class="block px-3"><div>TENTATIVA DE SUICÍDIO</div></div>
-                <div class="block px-3"><div>QUEDA PRÓPRIA ALTURA</div></div>
-                <div class="block px-3"><div>AFOGAMENTO</div></div>
-                <div class="block px-3"><div>AGRESSÃO</div></div>
-                <div class="block px-3"><div>ATROPELAMENTO</div></div>    
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESMORONAMENTO/DESLIZAMENTO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 150px;">EMERGÊNCIA MÉDICA
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 144px;">QUEDA DE ALTURA 2M
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 134px;">TENTATIVA DE SUICÍDIO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 126px;">QUEDA PRÓPRIA ALTURA
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 207px;">AFOGAMENTO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 235px;">AGRESSÃO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 180px;">ATROPELAMENTO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>    
                
             </div>
             <div class="column">
-                <div class="block px-3"><div>CHOQUE ELÉTRICO</div></div>
-                <div class="block px-3"><div>DESABAMENTO</div></div>
-                <div class="block px-3"><div>DOMÉSTICO</div></div>
-                <div class="block px-3"><div>ESPORTIVO</div></div>
-                <div class="block px-3"><div>INTOXICAÇÃO</div></div>
-                <div class="block px-3"><div>QUEDA BICICLETA</div></div>
-                <div class="block px-3"><div>QUEDA MOTO</div></div>
-                <div class="block px-3"><div>QUEDA NÍVEL<2M</div></div>
-                <div class="block px-3"><div>TRABALHO</div></div>
-                <div class="block px-3"><div>TRANSFERÊNCIA</div></div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 169px;">CHOQUE ELÉTRICO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 199px;">DESABAMENTO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 224px;">DOMÉSTICO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 230px;">ESPORTIVO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 211px;">INTOXICAÇÃO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 179px;">QUEDA BICICLETA
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 212px;">QUEDA MOTO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 180px;">QUEDA NÍVEL<2M
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 235px;">TRABALHO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 189px;">TRANSFERÊNCIA
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
                 
             </div>
   </div>
-  <div class="container-ultimo p-4"><div>OUTRO</div></div>
+  <div class="container-ultimo p-3">
+    <div class="text-area">OUTRO
+        <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea" style="height: 100%;"></textarea>
+            <label for="floatingTextarea">Outro</label>
+          </div>
+    </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
