--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -56,6 +56,7 @@
             height: 8%;
             display: flex;
             align-items: center;
+            border-radius: 10px;
         }
         .container-ultimo{
             background-color: #333333;
