--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ocorrencia</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap">
@@ -100,16 +100,7 @@
             </div>
         </div>
     </nav>
-    <!-- <div class="container">oi
-        <div class="row">
-            <div class="col-6">
-                <div class="container card"></div>
-            </div>
-            <div class="col-6">
-                <div class="container card"></div>
-            </div>
-        </div>
-    </div> -->
+
     <div class="casa mt-4">
             <div class="column">
                 <div class="block px-3">
