--- a/pages/situation.html
+++ b/pages/situation.html
@@ -289,6 +289,7 @@
                 </div>
             </div>
         </div>
+        <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
                 <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
