--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termo de Recusa</title>
+    <title>Vitima era</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap">
@@ -16,11 +16,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        background-color: #c1c1c1;
+        height: 100vh;
+        font-family: 'Inter', sans-serif;
+        color: white;
+    
+    }
+
+    #nav{
+        background-color: #333333;
+    }
+    .col-6{
+        background-color: #333333;
+        width: 40%;
+    }
+    #row{
+        justify-content: space-around;
+    }
+
+</style>
 <body>
     <nav class="navbar navbar-dark" id="nav">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a> 
-          <p class="navbar-title mt-3">TERMO DE RECUSA DE ATENDIMENTO E/OU TRANSPORTE</p>
+          <p class="navbar-title mt-3">VITIMA ERA</p>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" 
                   data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                   aria-label="Toggle navigation">
@@ -50,6 +77,37 @@
               </div>
           </div>
       </nav>
+
+      <div class="container text-center">
+        <div class="row g-2 d-flex" id="row">
+            <div class="col-6">
+                <div class="p-3">CICLISTA</div>
+            </div>
+            <div class="col-6">
+                <div class="p-3">CONDUTOR CARRO</div>
+            </div>
+            <div class="col-6">
+                <div class="p-3">CONDUTOR MOTO</div>
+            </div>
+            <div class="col-6">
+                <div class="p-3">CLÍNICO</div>
+            </div>
+            <div class="col-6">
+                <div class="p-3">GESTANTE</div>
+            </div>
+            <div class="col-6">
+                <div class="p-3">TRAUMA</div>
+            </div>
+            <div class="col-6">
+                <div class="p-3">CLÍNICO</div>
+            </div>
+            <div class="col-6">
+                <div class="p-3">CLÍNICO</div>
+            </div>
+        </div>
+      </div>
+
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"></script>
