--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -52,6 +52,15 @@
             border-bottom: 2px solid rgb(6, 108, 243);
         }
 
+        .text-line-personality {
+            background: transparent;
+            color: white;
+            border: none;
+            text-align: center;
+            border-bottom: 2px solid rgb(6, 108, 243);
+            width: 10%;
+        }
+
     </style>
 </head>
 
@@ -155,24 +164,29 @@
                     </div>
                 </div>
 
-                <div class="card col-9 mt-4" style="height: 170px;">
+                <div class="card col-9 mt-4" style="height: 210px;">
                     <div class="container d-flex gap-4 p-0">
 
                         <label class="card-text mb-0 mt-3">FAZ USO DE MEDICAÇÃO</label>
 
                         <div class="form-check mt-3">
-                            <input class="form-check-input" type="radio" name="healthProblem" id="flexRadioDefault1">
+                            <input class="form-check-input" type="radio" name="medicacao" id="flexRadioDefault1">
                             <label class="form-check-label card-text" for="flexRadioDefault1">
                                 SIM
                             </label>
                         </div>
                         <div class="form-check mt-3">
-                            <input class="form-check-input" type="radio" name="healthProblem" id="flexRadioDefault2"
+                            <input class="form-check-input" type="radio" name="medicacao" id="flexRadioDefault2"
                                 checked>
                             <label class="form-check-label card-text" for="flexRadioDefault2">
                                 NÃO
                             </label>
                         </div>
+                    </div>
+
+                    <div class="container d-flex p-0">
+                        <label class="card-text mb-0 p-0 mt-3">QUE HORAS INICIARAM AS CONTRAÇÕES?</label>
+                        <input type="text" class="text-line-personality ms-3">
                     </div>
 
                     <label class="card-text mt-3">QUAIS?</label>
