--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -32,8 +32,8 @@
         }
 
         .form-control:focus {
-            border-color: red;
-            box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
+            border-color: rgb(6, 108, 243);
+            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
         }
 
         #nav {
@@ -43,7 +43,6 @@
         #box {
             background-color: #333333;
             width: 90%;
-            height: 90%;
             border-radius: 10px;
         }
 
@@ -130,8 +129,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
-                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -168,8 +166,7 @@
 
     <form action="">
         <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
-            <div class="container-fluid" id="box">
-                <br>
+            <div class="container-fluid" id="box" style="padding-top: 16px; padding-bottom: 16px;">
                 <label class="card-text mb-2">Nome Completo</label>
                 <input type="text" class="form-control" id="nome" aria-describedby="name">
                 <br>
@@ -177,14 +174,14 @@
                 <input type="text" class="form-control" id="username" aria-describedby="username">
                 <br>
                 <label class="card-text mb-2">Email</label>
-                <input type="text" class="form-control" id="email" aria-describedby="email">
+                <input type="email" class="form-control" id="email" aria-describedby="email">
                 <br>
                 <label class="card-text mb-2">Matrícula</label>
                 <input type="number" class="form-control" id="matricula" aria-describedby="matricula">
                 <br>
                 <label class="card-text mb-2">Gênero</label>
                 <br>
-                <select name="genero" id="genero">
+                <select name="genero" id="genero" style="padding-left: 12px; padding-right: 12px; padding-top: 6px; padding-bottom: 6px;">
                     <option value="" disabled selected hidden></option>
                     <option value="masculino">Masculino</option>
                     <option value="feminino">Feminino</option>
@@ -193,8 +190,7 @@
                 <br>
                 <label class="card-text mb-2">Data de Nascimento</label>
                 <br>
-                <input type="text" id="dataNascimento" oninput="mascaraData(this)" maxlength="10">
-
+                <input type="text" id="dataNascimento" oninput="mascaraData(this)" maxlength="10" style="padding-left: 12px; padding-right: 12px; padding-top: 6px; padding-bottom: 6px;">
 
             </div>
         </div>
