--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -57,10 +57,6 @@
             /* height: 70%; */
             border-radius: 10px;
         }
-
-        #botao {
-            background-color: #244ab3;
-        }
     </style>
 </head>
 
@@ -157,7 +153,7 @@
     </nav>
 
     <form action="">
-        <div class="container d-flex justify-content-center align-items-center" style="height: 100vh; gap: 5%;">
+        <div class="container d-flex justify-content-center align-items-center" style="height: 80vh; gap: 5%;">
 
             <div class="box2 container-fluid" style="padding: 20px;">
 
@@ -167,7 +163,7 @@
                 <br>
                 <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="NºDESPACHANTE">
                 <br>
-                <input type="text" class="form-control" id="nome" aria-describedby="name" placeholder="H.CH">
+                <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="H.CH">
                 <br>
                 <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="KM FINAL">
                 <br>
@@ -207,9 +203,9 @@
         </div>
     </form>
 
-    <div class="d-flex justify-content-center" style="margin-top: -3%;">
+    <div class="d-flex justify-content-center">
         <div>
-            <button class="btn btn-secondary" id="botao">Retornar a tela de início</button>
+            <button class="btn btn-outline-primary btn-lg" id="botao">Retornar a tela de início</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
